--- a/Roadster finder.ipynb
+++ b/Roadster finder.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get ephemerides for observing site 413 (Siding Spring Observatory)"
+    "Get ephemerides for observing site 786 (USNO Washington DC)"
    ]
   },
   {
