--- a/Roadster finder.ipynb
+++ b/Roadster finder.ipynb
@@ -297,7 +297,7 @@
     "ax.coords[1].set_major_formatter('dd:mm:ss')\n",
     "ax.grid()\n",
     "\n",
-    "ax.set_title('SpaceX Roadster from Siding Spring Observatory')\n",
+    "ax.set_title('SpaceX Roadster from USNO')\n",
     "ax.legend()\n",
     "\n",
     "plt.savefig('roadster_finder.png', dpi=100);"
